--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       href="./images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/queries.css" />
 
     <title>Frontend Mentor | Order summary card</title>
   </head>
