--- a/index.html
+++ b/index.html
@@ -23,47 +23,49 @@
   </head>
 
   <body>
-    <div class="order-summary-container">
-      <div class="img-box">
-        <img
-          src="images/illustration-hero.svg"
-          alt="A dancing person listening to music"
-          class="hero-img"
-        />
-      </div>
-
-      <div class="text-box">
-        <h1 class="order-title">Order Summary</h1>
-        <p class="order-description">
-          You can now listen to millions of songs, audiobooks, and podcasts on
-          any device anywhere you like!
-        </p>
-
-        <div class="order-plan">
-          <div class="plan--icon">
-            <img
-              src="images/icon-music.svg"
-              alt="Music note icon"
-              class="icon-music"
-            />
-          </div>
-          <div class="plan--type">
-            <span class="type--title">Annual Plan</span>
-            <span class="type--price">$59.99/year</span>
-          </div>
-          <a href="#" class="plan--change">Change</a>
+    <main>
+      <div class="order-summary-container">
+        <div class="img-box">
+          <img
+            src="images/illustration-hero.svg"
+            alt="A dancing person listening to music"
+            class="hero-img"
+          />
         </div>
 
-        <a href="#" class="btn btn-cta">Proceed to Payment</a>
-        <a href="#" class="btn btn-cancel">Cancel Order</a>
-      </div>
-    </div>
+        <div class="text-box">
+          <h1 class="order-title">Order Summary</h1>
+          <p class="order-description">
+            You can now listen to millions of songs, audiobooks, and podcasts on
+            any device anywhere you like!
+          </p>
 
-    <!-- <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div> -->
+          <div class="order-plan">
+            <div class="plan--icon">
+              <img
+                src="images/icon-music.svg"
+                alt="Music note icon"
+                class="icon-music"
+              />
+            </div>
+            <div class="plan--type">
+              <span class="type--title">Annual Plan</span>
+              <span class="type--price">$59.99/year</span>
+            </div>
+            <a href="#" class="plan--change">Change</a>
+          </div>
+
+          <a href="#" class="btn btn-cta">Proceed to Payment</a>
+          <a href="#" class="btn btn-cancel">Cancel Order</a>
+        </div>
+      </div>
+
+      <!-- <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Your Name Here</a>.
+      </div> -->
+    </main>
   </body>
 </html>
